--- a/packages/web/src/pages/thread/threadCard.scss
+++ b/packages/web/src/pages/thread/threadCard.scss
@@ -6,10 +6,10 @@ $color-brown-gray: #a1a1a1;
 }
 
 .card-outer {
-  padding: 15px;
-  background-color: $color-gray-light;
-  box-shadow: 0 2px 5px 0 lighten($color-brown-gray, 10%);
-  border-radius: 10px;
+  //padding: 15px;
+  //background-color: $color-gray-light;
+  //box-shadow: 0 2px 5px 0 lighten($color-brown-gray, 10%);
+  //border-radius: 10px;
 
 }
 
