--- a/packages/app--ipsum-store/src/style/scss-partials/_muiThemeMap.scss
+++ b/packages/app--ipsum-store/src/style/scss-partials/_muiThemeMap.scss
@@ -7,20 +7,36 @@ $map: (
   breakpoints-lg: 1080,
   breakpoints-xl: 1366,
   spacing: 8,
+  palette-mode: light,
   palette-common-black: #000,
   palette-common-white: #fff,
-  palette-primary-main: #00c095,
-  palette-primary-dark: #019775,
-  palette-primary-light: #87d2c1,
-  palette-secondary-dark: #01193e,
-  palette-secondary-main: #21076a,
-  palette-secondary-light: #6848c4,
-  palette-success-main: #1a6b4d,
-  palette-success-light: #cbf4c8,
-  palette-error-main: #f44336,
-  palette-text-primary: rgba(0, 0, 0, 0.85),
-  palette-text-secondary: rgba(255, 255, 255, 0.80),
-  palette-text-disabled: rgba(0, 0, 0, 0.40),
+  palette-primary-main: #008BCC,
+  palette-primary-dark: #00699a,
+  palette-primary-light: #339cd4,
+  palette-primary-contrastText: #fff,
+  palette-secondary-dark: #96377a,
+  palette-secondary-main: #af4c92,
+  palette-secondary-light: #bf70a8,
+  palette-secondary-contrastText: #fff,
+  palette-error-dark: #bf253b,
+  palette-error-main: #ee314c,
+  palette-error-light: #f15a70,
+  palette-error-contrastText: #fff,
+  palette-warning-main: #ff7c24,
+  palette-warning-light: #ff9650,
+  palette-warning-dark: #ec660c,
+  palette-warning-contrastText: #fff,
+  palette-info-dark: #96377a,
+  palette-info-main: #af4c92,
+  palette-info-light: #bf70a8,
+  palette-info-contrastText: #fff,
+  palette-success-main: #77c043,
+  palette-success-light: #77c043,
+  palette-success-dark: #61a331,
+  palette-success-contrastText: #fff,
+  palette-text-primary: #262626,
+  palette-text-secondary: #525252,
+  palette-text-disabled: #969696,
   palette-text-hint: #6848c4,
   palette-divider: rgba(0, 0, 0, 0.20),
   palette-background-default: #fff,
@@ -28,19 +44,6 @@ $map: (
   shape-borderRadius: 4,
   ext-spacing: 8,
   ext-maxContainerWidth: 1200,
-  ext-greys-0: #000,
-  ext-greys-1: #222,
-  ext-greys-2: #333,
-  ext-greys-3: #3f3f3f,
-  ext-greys-4: #444,
-  ext-greys-5: #4f4f4f,
-  ext-greys-6: #555,
-  ext-greys-7: #5f5f5f,
-  ext-greys-8: #666,
-  ext-greys-9: #6f6f6f,
-  ext-greys-10: #777,
-  ext-greys-11: #767676,
-  ext-lighterText: #767676,
   ext-background-dark: #031033,
   ext-toolbar-normal: 64,
   ext-toolbar-small: 56,
